--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="css/euler.css" rel="stylesheet">
     
     <!-- JS Libraries -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.9.0/math.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.5/math.js" type="text/javascript"></script>
     <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript" ></script>   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
     <script src="js/overlay.js" type="text/javascript"></script>
