Fixed dir names

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <meta name="author" content="">
 
     <!-- Custom CSS -->
-    <link href="css/euler.css" rel="stylesheet">
+    <link href="CSS/euler.css" rel="stylesheet">
 
     <!-- JS Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.5/math.js" type="text/javascript"></script>
     <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
-    <script src="js/overlay.js" type="text/javascript"></script>
-    <script src="js/calculate.js" type="text/javascript"></script>
-    <script src="js/calculateLite.js" type="text/javascript"></script>
-    <script src="js/pointObject.js" type="text/javascript"></script>
-    <script src="js/chart.js" type="text/javascript"></script>
+    <script src="JS/overlay.js" type="text/javascript"></script>
+    <script src="JS/calculate.js" type="text/javascript"></script>
+    <script src="JS/calculateLite.js" type="text/javascript"></script>
+    <script src="JS/pointObject.js" type="text/javascript"></script>
+    <script src="JS/chart.js" type="text/javascript"></script>
 
     <title>Euler's Method</title>
 </head>
